refactor(test): remove magic numbers #42